# PAMSI

BellmanFord/: BellmanArrayOutputFile.txt  BellmanArrayTime.txt  BellmanFordArray.cpp  BellmanFordArray.h  BellmanFordList.cpp  BellmanFordList.h  BellmanListOutputFile.txt  BellmanListTime.txt  BelmanNowe.xlsx  CMakeLists.txt  Node.h  Vertex.h  main.cpp
Checkers/: BoardController.cpp  BoardController.h  BotController.cpp  BotController.h  CMakeLists.txt  Capture.cpp  Capture.h  Cell.cpp  Cell.h  Chequer.h  ChequerRep.cpp  ChequerRep.h  ChequerType.h  Color.h  GameController.cpp  GameController.h  Movement.cpp  Movement.h  Node.cpp  Node.h  main.cpp
GrafyNowe/: BellmanList.txt  BellmanMatrix.txt  CMakeLists.txt  DijkstraList.txt  DijkstraMatrix.txt  Edge.cpp  Edge.h  Graph.cpp  Graph.h  ListGraph.cpp  ListGraph.h  MatrixGraph.cpp  MatrixGraph.h  Pomiary.xlsx  Sprawozdanie.docx  Vertex.cpp  main.cpp
Graphs/: CMakeLists.txt  DArrayTime.txt  DListTime.txt  DijkstraArray.cpp  DijkstraArray.h  DijkstraList.cpp  DijkstraList.h  DijkstraOutputArrayFile.txt  DijkstraOutputListFile.txt  EdgeData.txt  Node.cpp  Pomiary.xlsx  Sprawozdanie.docx  Vertex.cpp  Vertex.h  main.cpp
StructuresImplementations/: CMakeLists.txt  Container.h  List.h  ListElement.h  Map.h  PriorityContainer.h  PriorityQueue.h  Queue.h  Stack.h  main.cpp
SumTwoMatriecies/: input.txt  output.txt  times.csv
sort/: Bubble.cpp  Bubble.h  BubbleData.txt  CMakeLists.txt  Datas.xlsx  HeapData.txt  HeapS.cpp  HeapS.h  MergeData.txt  MergeS.cpp  MergeS.h  Sprawozdanie.docx  TimesData.txt  main.cpp
(+7 files in other folders)
